# Example

./: CMakeLists.txt  FileTypeTransformation.ipynb  datafetcher.hpp  main.cpp  shoppingList.hpp
test/: CMakeLists.txt  shoppingTests.cpp
